test/gpu/native/environment/gpuCodegenErrorExitStatus.good
gpuCodegenErrorExitStatus.chpl:10: error: Could not find C function for foo;  perhaps it is missing or is a macro?
